fix(range): range knob does not overflow in item

--- a/core/src/components/range/range.ios.scss
+++ b/core/src/components/range/range.ios.scss
@@ -21,6 +21,10 @@
   @include padding($range-ios-padding-vertical, $range-ios-padding-horizontal);
 }
 
+:host(.in-item:not(.range-has-label):not(.legacy-range)) .range-slider {
+  @include margin(null, $range-ios-padding-horizontal);
+}
+
 :host(.ion-color) .range-bar-active,
 :host(.ion-color) .range-tick-active {
   background: current-color(base);
